# Agent_RPG_Simulator

./: .gitignore  README.md  pyproject.toml  requirements-notebooks.txt
docs/: openrouter.md
envs/: .env.example  requirements-all.txt  requirements-dev.txt  requirements-local.txt  requirements.txt
examples/scenarios/: border_conflict.yaml  council.yaml  minimal.yaml  tavern.yaml
notebooks/: 01_quickstart.ipynb  02_world_and_agents.ipynb  03_hf_inference_backend.ipynb  04_local_transformers_optional.ipynb  05_reporting_and_metrics.ipynb  06_full_randomized_simulation.ipynb  07_simulation_exemplar.ipynb  08_live_hf_spectator.ipynb
prompts_and_personas/: CATALOG.yaml  README.md
prompts_and_personas/_template/: README.md  manifest.example.yaml
prompts_and_personas/personas/cautious_elder/: constraints.md  injection_block.md  lore.md  manifest.yaml  methodology.md  prompts.md  (+3 more)
prompts_and_personas/tools/: build_library.py
scripts/: download_local_instruct_model.py  exemplar_07.py  rebuild_notebooks.py  spectator_08.py
src/agent_rpg/: __init__.py  cli.py  engine.py  live_spectator_ui.py  loader.py  model_catalog.py  multi_model.py  parse.py  prompts.py  random_scenario.py  repo_root.py
tests/: conftest.py  test_engine.py  test_engine_openrouter.py  test_hf_inference_errors.py  test_hf_live.py  test_live_spectator_ui.py  test_loader_schema.py  test_model_catalog.py  test_multi_model.py  test_notebooks.py  test_openrouter_backend.py  test_parse.py  test_prompts.py  test_random_scenario.py  test_repo_root.py  test_reporting.py  test_transformers_local_kwargs.py
(+118 files in other folders)
